# pplx-cli

./: .gitignore  Cargo.toml  README.md
local/rquest-5.1.0/: Cargo.toml
local/rquest-util-2.2.1/: .cargo_vcs_info.json  Cargo.toml
skill/pplx-cli/: SKILL.md
skill/pplx-cli/evals/: evals.json
skill/pplx-cli/references/: details.md
src/: client.rs  config.rs  error.rs  main.rs  sse.rs  upload.rs
